--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .header {
     grid-area: h;
-    background-color: green;
+    background-color: #9e99a9;
 
 }
 
 .header img {
-    width: 20px;
+    height: 120px;
+    margin: 10px;
 }
