--- a/src/components/common/FormsControls/FormControls.module.css
+++ b/src/components/common/FormsControls/FormControls.module.css
@@ -1,7 +1,3 @@
-.formControl {
-
-}
-
 .formControl.error input,
 .formControl.error textarea {
     border: 2px solid red;
@@ -9,5 +5,11 @@
 }
 
 .formControl.error span {
+    color: red;
+}
+
+.formSummaryError {
+    border: 1px solid red;
+    padding: 5px;
     color: red;
 }
