--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,17 @@
+.paginator {
+    margin: 10px;
+    padding: 10px;
+}
+
+.pageNumber {
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+
 .selectedPage {
     font-weight: bold;
+    border: 1px solid #fff;
+    color: #fff;
 }
