--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 @import '~antd/dist/antd.css';
 
+body {
+    background-image: url("assets/images/background.jpg");
+    background-size: cover;
+    background-repeat: repeat;
+}
+
 .app-wrapper {
     margin: 0 auto;
     display: grid;
-    width: 1200px;
+    grid-template-rows: 130px 1fr;
+    grid-template-columns: 1fr 10fr;
+    width: 100%;
+    height: 100vh;
     grid-template-areas:
   'h h'
-  'n c';
-
-    /*grid-template-rows: 60px 1fr;*/
-    grid-template-columns: 1fr 10fr;
-    /*  grid-gap: 10px;*/
-}
-
-.app-wrapper-content {
-    grid-area: c;
-    background-color: #c5c2c2;
+  'n c'
+  'f f';
 }
 
 
