--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -12,14 +12,16 @@
 }
 
 .messages {
-    padding: 10px;
+    padding: 20px;
 }
 
 .messages .message {
     color: white;
 }
+
 .avatar {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin: 10px;
 }
