--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,18 +1,26 @@
 .paginator {
-    margin: 10px;
-    padding: 10px;
+    display: flex;
+    margin: 15px;
+}
+
+.paginatorNumbers {
+    display: flex;
+    justify-content: space-around;
+    width: 800px;
 }
 
 .pageNumber {
-    margin: 5px;
-    padding: 5px;
-    border: 1px solid black;
+    font-size: 25px;
+    margin: 0 11px;
     cursor: pointer;
+    color: white;
 }
-
 
 .selectedPage {
     font-weight: bold;
-    border: 1px solid #fff;
-    color: #fff;
+    color: #1890ff;
+}
+
+.button {
+    font-size: 40px;
 }
