--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,18 +1,48 @@
 .header {
     grid-area: h;
-    background-color: #9e99a9;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
 }
 
-.header img {
-    height: 120px;
-    margin: 10px;
+.logo {
+    height: 130px;
+    margin: 5px;
+}
+
+.title {
+    padding: 20px;
+    font-size: 40px;
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.7);
+    text-shadow: #1890ff 0 0 2px;
 }
 
 .loginBlock {
+    padding: 10px;
     float: right;
 }
 
 .loginBlock a {
     color: white;
+    text-shadow: #1890ff 0 0 2px;
     text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.logout {
+    color: #fff;
+    font-weight: bold;
+    padding: 20px 0;
+    font-size: 20px;
+    margin: 10px;
+}
+
+.avatar {
+    border-radius: 50%;
+    height: 60px;
+    padding: 0 10px;
 }
