--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,5 +1,31 @@
-.container {
+.wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info {
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+    text-shadow: #1890ff 0 0 2px;
+}
+
+.container {
+    color: #fff;
+    text-align: center;
+    padding: 30px;
+    border: 1px solid #fff;
+    width: 280px;
+    min-height: 280px;
+    max-height: 400px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+}
+
+.login {
+    color: #fff;
+    text-shadow: #1890ff 0 0 2px;
 }
 
 .form {
@@ -10,4 +36,13 @@
 .error {
     color: red;
     font-weight: bold;
+}
+
+.rememberMe {
+    text-align: start;
+    margin: 10px 0;
+}
+
+.captchaInput {
+    color: #000;
 }
