--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -6,8 +6,13 @@
     width: 100%;
 }
 
+.avatar {
+    text-align: center;
+}
+
 .mainPhoto {
     max-width: 200px;
+    border-radius: 50%;
 }
 
 .contact {
