--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,9 @@
 .postsBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 10px;
+    width: 160px;
 }
 
 .posts {
