--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,9 +1,11 @@
 .item {
     color: #fff;
     text-shadow: #1890ff 0 0 2px;
+    width: 200px;
 }
 
 .item img {
+    margin: 5px;
     width: 50px;
     height: 50px;
     border-radius: 30px;
